--- a/7- Scheduler/Makefile
+++ b/7- Scheduler/Makefile
@@ -2,8 +2,8 @@ all: 	main
 		./main
 
 
-main: main.cpp interpreter.o parser.o pcb.o
-	g++ -o main main.cpp interpreter.o parser.o pcb.o
+main: main.cpp interpreter.o parser.o pcb.o scheduler.o
+	g++ -o main main.cpp interpreter.o parser.o pcb.o scheduler.o
 
 interpreter.o: interpreter.cpp
 	g++ -c interpreter.cpp
@@ -13,6 +13,9 @@ parser.o: parser.cpp
 
 pcb.o: pcb.cpp
 	g++ -c pcb.cpp
+
+scheduler.o: scheduler.cpp
+	g++ -c scheduler.cpp
 
 clean:
 	rm *.o main
